allo insert childern to custom composite components

--- a/faces/src/main/resources/META-INF/resources/lapsafaces/inputDate.xhtml
+++ b/faces/src/main/resources/META-INF/resources/lapsafaces/inputDate.xhtml
@@ -26,6 +26,7 @@
 				update="#{cc.attrs.update}" listener="#{cc.attrs.changedListener}" />
 			<p:ajax event="keyup" delay="700" process="#{cc.attrs.process}"
 				update="#{cc.attrs.update}" listener="#{cc.attrs.changedListener}" />
+			<cc:insertChildren />
 		</p:calendar>
 	</cc:implementation>
 
