--- a/faces/src/main/resources/META-INF/resources/lapsafaces/inputLocalTime.xhtml
+++ b/faces/src/main/resources/META-INF/resources/lapsafaces/inputLocalTime.xhtml
@@ -19,13 +19,14 @@
 
 	<cc:implementation>
 		<p:calendar id="value" value="#{cc.attrs.value}" showOn="focus"
-			navigator="true" title="#{cc.attrs.title}" pattern="HH:mm:ss"  timeOnly="true"
-			onfocus="select()" converter="localDateTimeConverter"
+			navigator="true" title="#{cc.attrs.title}" pattern="HH:mm:ss"
+			timeOnly="true" onfocus="select()" converter="localDateTimeConverter"
 			placeholder="#{cc.attrs.placeholder}">
 			<p:ajax event="dateSelect" process="#{cc.attrs.process}"
 				update="#{cc.attrs.update}" listener="#{cc.attrs.changedListener}" />
 			<p:ajax event="keyup" delay="700" process="#{cc.attrs.process}"
 				update="#{cc.attrs.update}" listener="#{cc.attrs.changedListener}" />
+			<cc:insertChildren />
 		</p:calendar>
 	</cc:implementation>
 
